feat: v0.0.4