@@ -67,13 +67,11 @@
                             <BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
                             <BP_JVM_VERSION>21</BP_JVM_VERSION>
                             <BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
-                                -H:IncludeResources=".*"
-                                -march=skylake
-                                --native-compiler-options=-march=skylake
-                                --native-compiler-options=-mtune=skylake
                                 --no-fallback
-                                -O3
-                                --gc=serial
+                                --enable-preview
+                                -H:+UnlockExperimentalVMOptions
+                                -O2
+                                -march=skylake
                             </BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
                         </env>
                     </image>
